--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -61,6 +61,17 @@
   keywords = {NEANDERTHALS}
 }
 
+@incollection{antunesGrutaNovaColumbeira2000,
+  title = {Gruta {{Nova}} Da {{Columbeira}}, {{Gruta}} Das  {{Salemas}} and {{Gruta}} Da {{Figueira Brava}}: Stratigraphy, and Chronology of the Pleistocene Deposits},
+  booktitle = {\'Ultimos {{Neandertais}} Em {{Portugal}} \textendash{} Evid\^encia, Odontol\'ogica e Outra.},
+  author = {Antunes, M. T. and Cardoso, Joao Luis},
+  editor = {Antunes, M. T.},
+  date = {2000},
+  publisher = {{Academia das Ci\^encias de Lisboa}},
+  location = {{Lisboa}},
+  file = {E\:\\Zotero\\storage\\MPGXNWUC\\Antunes_Cardoso_2000_Gruta Nova da Columbeira, Gruta das Salemas and Gruta da Figueira Brava.pdf}
+}
+
 @article{aubryTimingMiddletoUpperPalaeolithic2020,
   title = {Timing of the {{Middle}}-to-{{Upper Palaeolithic}} Transition in the {{Iberian}} Inland ({{Cardina}}-{{Salto}} Do {{Boi}}, {{C\^oa Valley}}, {{Portugal}})},
   author = {Aubry, Thierry and Dimuccio, Luca Antonio and Barbosa, Ant\'onio Fernando and Lu\'is, Lu\'is and Santos, Andr\'e Tom\'as and Silvestre, Marcelo and Thomsen, Kristina J\o rkov and Rades, Eike and Autzen, Martin and Murray, Andrew Sean},
@@ -100,6 +111,24 @@
   file = {E\:\\Zotero\\storage\\DTB8NFMG\\Burke et al. - 2011 - The Palaeolithic occupation of southern Alentejo .pdf},
   langid = {english},
   number = {1}
+}
+
+@book{cardosoGrutaNovaColumbeira2002,
+  title = {A {{Gruta Nova}} Da {{Columbeira}} \textendash{} {{Bombarral}}},
+  author = {Cardoso, J. L. and Raposo, L. and Ferreira, O. V.},
+  date = {2002},
+  publisher = {{C\^amara Municipal do Bombarral}},
+  location = {{Cadaval}}
+}
+
+@incollection{cardosoIndustriasPaleoliticasGruta1995,
+  title = {As Ind\'ustrias Paleol\'iticas Da {{Gruta}} Da {{Figueira Brava}} ({{Set\'ubal}})},
+  booktitle = {3\textordfeminine{} {{Reuni\~ao}} Do {{Quatern\'ario Iberico}}},
+  author = {Cardoso, Jo\~ao Luis and Raposo, Luis},
+  date = {1995},
+  pages = {451--456},
+  location = {{Coimbra}},
+  file = {E\:\\Zotero\\storage\\PV7AZ48J\\Cardoso_Raposo_1995_As indústrias paleolíticas da Gruta da Figueira Brava (Setúbal).pdf}
 }
 
 @article{cardosoMousterianComplexPortugal2006,
@@ -378,6 +407,17 @@
   number = {1}
 }
 
+@inproceedings{raposoNoticiaDescobertaEstacao1985,
+  title = {Not\'icia Da Descoberta Da Esta\c{c}\~ao Moustierense Da {{Foz}} Do {{Enxarrique}}},
+  booktitle = {Actas Da {{I Reuni\~ao}} Do {{Quatern\'ario Ib\'erico}}},
+  author = {Raposo, L. and Salvador, M. and Silva, A. C.},
+  date = {1985},
+  volume = {1},
+  pages = {78--89},
+  publisher = {{APEQ}},
+  location = {{Lisboa}}
+}
+
 @book{raposoSitioPaleoliticoMedio1998,
   title = {O {{S\'itio}} Do {{Paleol\'itico M\'edio}} Da {{Concei\c{c}\~ao}} ({{Alcochete}})},
   author = {Raposo, Lu\'is and Cardoso, Jo\~ao Lu\'is},
@@ -449,6 +489,18 @@
   abstract = {{$<$}sec{$>$} {$<$}title{$>$}Background{$<$}/title{$>$} {$<$}p{$>$}Neandertals and the Middle Paleolithic persisted in the Iberian Peninsula south of the Ebro drainage system for several millennia beyond their assimilation/replacement elsewhere in Europe. As only modern humans are associated with the later stages of the Aurignacian, the duration of this persistence pattern can be assessed via the dating of diagnostic occurrences of such stages.{$<$}/p{$>$} {$<$}/sec{$><$}sec{$>$} {$<$}title{$>$}Methodology/Principal Findings{$<$}/title{$>$} {$<$}p{$>$}Using AMS radiocarbon and advanced pretreatment techniques, we dated a set of stratigraphically associated faunal samples from an Aurignacian III\textendash IV context excavated at the Portuguese cave site of Pego do Diabo. Our results establish a secure {$<$}italic{$>$}terminus ante quem{$<$}/italic{$>$} of ca.34,500 calendar years ago for the assimilation/replacement process in westernmost Eurasia. Combined with the chronology of the regional Late Mousterian and with less precise dating evidence for the Aurignacian II, they place the denouement of that process in the 37th millennium before present.{$<$}/p{$>$} {$<$}/sec{$><$}sec{$>$} {$<$}title{$>$}Conclusions/Significance{$<$}/title{$>$} {$<$}p{$>$}These findings have implications for the understanding of the emergence of anatomical modernity in the Old World as a whole, support explanations of the archaic features of the Lagar Velho child's anatomy that invoke evolutionarily significant Neandertal/modern admixture at the time of contact, and counter suggestions that Neandertals could have survived in southwest Iberia until as late as the Last Glacial Maximum.{$<$}/p{$>$} {$<$}/sec{$>$}},
   file = {E\:\\Zotero\\storage\\NMAV5KV6\\Zilhão et al. - 2010 - Pego do Diabo (Loures, Portugal) Dating the Emerg.pdf},
   keywords = {NEANDERTHALS}
+}
+
+@article{zilhaoPreciseDatingMiddletoUpper2017,
+  title = {Precise Dating of the {{Middle}}-to-{{Upper Paleolithic}} Transition in {{Murcia}} ({{Spain}}) Supports Late {{Neandertal}} Persistence in {{Iberia}}},
+  author = {Zilh\~ao, Jo\~ao and Anesin, Daniela and Aubry, Thierry and Badal, Ernestina and Cabanes, Dan and Kehl, Martin and Klasen, Nicole and Lucena, Armando and Mart\'in-Lerma, Ignacio and Mart\'inez, Susana},
+  date = {2017},
+  journaltitle = {Heliyon},
+  volume = {3},
+  pages = {e00435},
+  file = {E\:\\Zotero\\storage\\KBTX8RBM\\Zilhão et al. - 2017 - Precise dating of the Middle-to-Upper Paleolithic .pdf},
+  keywords = {NEANDERTHALS},
+  number = {11}
 }
 
 @preamble{ "\ifdefined\DeclarePrefChars\DeclarePrefChars{'’-}\else\fi " }
