--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -97,6 +97,14 @@
   keywords = {NEANDERTHALS}
 }
 
+@incollection{bocinskyLandscapebasedHypothesisTesting2017,
+  title = {Landscape-Based {{Hypothesis Testing}} in {{R}}},
+  booktitle = {How {{To Do Archaeological Science Using R}}},
+  author = {Bocinsky, Kyle},
+  date = {2017},
+  url = {https://benmarwick.github.io/How-To-Do-Archaeological-Science-Using-R/using-r-as-a-gis-working-with-raster-and-vector-data.html}
+}
+
 @article{burkePalaeolithicOccupationSouthern2011,
   title = {The {{Palaeolithic}} Occupation of Southern {{Alentejo}}: The {{Sado River Drainage Survey}}},
   shorttitle = {The {{Palaeolithic}} Occupation of Southern {{Alentejo}}},
@@ -169,6 +177,22 @@
   keywords = {Iberia,Middle Paleolithic,NEANDERTHALS,Rabbits,Small game,Subsistence}
 }
 
+@incollection{contrerasUsingGISWorking2017,
+  title = {Using {{R}} as a {{GIS}}: Working with Raster and Vector Data},
+  booktitle = {How {{To Do Archaeological Science Using R}}},
+  author = {Contreras, Daniel},
+  date = {2017},
+  url = {https://benmarwick.github.io/How-To-Do-Archaeological-Science-Using-R/using-r-as-a-gis-working-with-raster-and-vector-data.html}
+}
+
+@article{coude-gaussenSerrasPenedaGeres1981,
+  title = {Les {{Serras}} Da {{Peneda}} et Do {{Ger\^es}}. {{\'Etude}} G\'eomorphologique},
+  author = {Coud\'e-Gaussen, Genevi\`eve},
+  date = {1981},
+  journaltitle = {Memorias do Centro de estudos georgraficos Lisboa},
+  number = {5}
+}
+
 @incollection{cunha-ribeiroJazidaPaleoliticaSapateiros2013,
   title = {A Jazida Paleol\'itica de {{Sapateiros}} 2 ({{Reguengos}} de {{Monsaraz}})},
   booktitle = {Testemunhos Do {{Paleol\'itico}} No {{Regolfo}} de {{Alqueva}}},
@@ -238,6 +262,36 @@
   number = {8}
 }
 
+@article{dauraNewMiddlePleistocene2017,
+  title = {New {{Middle Pleistocene}} Hominin Cranium from {{Gruta}} Da {{Aroeira}} ({{Portugal}})},
+  author = {Daura, Joan and Sanz, Montserrat and Arsuaga, Juan Luis and Hoffmann, Dirk L. and Quam, Rolf M. and Ortega, Mar\'ia Cruz and Santos, Elena and G\'omez, Sandra and Rubio, Angel and Villaescusa, Luc\'ia and Souto, Pedro and Mauricio, Jo\~ao and Rodrigues, Filipa and Ferreira, Artur and Godinho, Paulo and Trinkaus, Erik and Zilh\~ao, Jo\~ao},
+  date = {2017-03-28},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  shortjournal = {PNAS},
+  volume = {114},
+  pages = {3397--3402},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1619040114},
+  abstract = {The Middle Pleistocene is a crucial time period for studying human evolution in Europe, because it marks the appearance of both fossil hominins ancestral to the later Neandertals and the Acheulean technology. Nevertheless, European sites containing well-dated human remains associated with an Acheulean toolkit remain scarce. The earliest European hominin crania associated with Acheulean handaxes are at the sites of Arago, Atapuerca Sima de los Huesos (SH), and Swanscombe, dating to 400\textendash 500 ka (Marine Isotope Stage 11\textendash 12). The Atapuerca (SH) fossils and the Swanscombe cranium belong to the Neandertal clade, whereas the Arago hominins have been attributed to an incipient stage of Neandertal evolution, to Homo heidelbergensis, or to a subspecies of Homo erectus. A recently discovered cranium (Aroeira 3) from the Gruta da Aroeira (Almonda karst system, Portugal) dating to 390\textendash 436 ka provides important evidence on the earliest European Acheulean-bearing hominins. This cranium is represented by most of the right half of a calvarium (with the exception of the missing occipital bone) and a fragmentary right maxilla preserving part of the nasal floor and two fragmentary molars. The combination of traits in the Aroeira 3 cranium augments the previously documented diversity in the European Middle Pleistocene fossil record.},
+  eprint = {28289213},
+  eprinttype = {pmid},
+  file = {E\:\\Zotero\\storage\\QMEA3ML8\\Daura et al_2017_New Middle Pleistocene hominin cranium from Gruta da Aroeira (Portugal).pdf;E\:\\Zotero\\storage\\I7HEGTYB\\3397.html},
+  keywords = {Acheulean,Europe,evolutionary patterns,human evolution,Neandertal roots},
+  langid = {english},
+  number = {13}
+}
+
+@article{daveauGlaciationSerraEstrela1971,
+  title = {La Glaciation de La {{Serra}} Da {{Estrela}}},
+  author = {Daveau, Suzanne},
+  date = {1971},
+  journaltitle = {Finisterra},
+  volume = {6},
+  isbn = {2281-4574},
+  number = {11}
+}
+
 @article{deschampsAssessingSiteFormation2018,
   title = {Assessing Site Formation and Assemblage Integrity through Stone Tool Refitting at {{Gruta}} Da {{Oliveira}} ({{Almonda}} Karst System, {{Torres Novas}}, {{Portugal}}): {{A Middle Paleolithic}} Case Study},
   shorttitle = {Assessing Site Formation and Assemblage Integrity through Stone Tool Refitting at {{Gruta}} Da {{Oliveira}} ({{Almonda}} Karst System, {{Torres Novas}}, {{Portugal}})},
@@ -254,6 +308,20 @@
   keywords = {Archaeological excavation,Archaeology,Lithic technology,Lithostratigraphy,NEANDERTHALS,Paleoanthropology,Paleolithic period,Sediment,Stratigraphy},
   langid = {english},
   number = {2}
+}
+
+@article{ferreiraConsideracoesAcercaArrefecimento2012,
+  title = {Considera\c{c}\~oes acerca do arrefecimento Plistoc\'enico em Portugal},
+  author = {Ferreira, Ant\'onio Brum},
+  date = {2012-12-13},
+  journaltitle = {Finisterra},
+  volume = {35},
+  issn = {0430-5027},
+  doi = {10.18055/Finis1660},
+  abstract = {NOTE ON THE PLEISTOCENE COOLING IN PORTUGAL \textendash{} Prevailing conditions in the North Atlantic and Western Europe during the Maximum Cooling of the Last Glaciation can be deduced from the Climap Project (1976) results and from the Atlas of Paleoclimates and Paleoenvironments of the Northern Hemisphere (FRENZEL et al., 1992). Taking into account this framework of extreme climatic conditions and the nature of the glacial and periglacial relict phenomena in the Iberian Peninsula, an attempt is made to evaluate the degree of cooling in Portugal during the Ger\^es and Estrela glaciations. A drop of about 10\textordmasculine{} C in summer temperatures is suggested.},
+  file = {E\:\\Zotero\\storage\\NVJMHAYZ\\Ferreira - 2012 - Considerações acerca do arrefecimento Plistocénico.pdf},
+  langid = {portuguese},
+  number = {70}
 }
 
 @article{hawsCoastalWetlandsNeanderthal2010,
@@ -283,6 +351,31 @@
   file = {E\:\\Zotero\\storage\\PZF38IWU\\Haws et al. - 2011 - Paleolithic Landscapes and Seascapes of the West C.pdf},
   isbn = {978-1-4419-8218-6 978-1-4419-8219-3},
   langid = {english}
+}
+
+@software{hijmansRasterGeographicAnalysis2012,
+  title = {Raster: {{Geographic}} Analysis and Modeling with Raster Data},
+  author = {Hijmans, Robert and van Etten, Jacob},
+  date = {2012},
+  url = {http://cran.r-project.org/package=raster},
+  options = {useprefix=true},
+  version = {R package version 2.0-12}
+}
+
+@incollection{kvammeThereBackAgain2005,
+  title = {There and Back Again: {{Revisiting}} Archaeological Locational Modeling},
+  booktitle = {{{GIS}} and Archaeological Site Location Modeling},
+  author = {Kvamme, Kenneth L.},
+  date = {2005},
+  pages = {23--55},
+  publisher = {{CRC Press}}
+}
+
+@article{manuppellaPanoramaDosCalcarios1975,
+  title = {Panorama Dos Calc\'arios Jur\'assicos Portugueses},
+  author = {Manuppella, Giuseppe and Moreira, J. C.},
+  date = {1975},
+  journaltitle = {Boletim de Minas}
 }
 
 @incollection{marksLithicAssemblagesLate2001,
@@ -423,6 +516,23 @@
   author = {Raposo, Lu\'is and Cardoso, Jo\~ao Lu\'is},
   date = {1998},
   publisher = {{CEMA-Centro de Estudos e Monitoriza\c{c}\~ao Ambiental}}
+}
+
+@book{ribeiroIntroductionGeologieGenerale1979,
+  title = {Introduction \`a La G\'eologie G\'en\'erale Du {{Portugal}}},
+  author = {Ribeiro, Antonio and Antunes, M. T. and Ferreira, M. P. and Rocha, R. B. and Soares, A. F. and Zbyszewski, G. and De Almeida, F. Moitinho and De Carvalho, D. and Monteiro, J. H.},
+  date = {1979},
+  publisher = {{Servi\c{c}os geol\'ogicos de Portugal}}
+}
+
+@article{sebastienFactoMineRPackageMultivariate2008,
+  title = {{{FactoMineR}}: {{An R Package}} for {{Multivariate Analysis}}.},
+  author = {Sebastien, Le and Julie, Josse and Francoi, Husson},
+  date = {2008},
+  journaltitle = {Journal of Statistical Software},
+  volume = {25},
+  pages = {1--18},
+  number = {1}
 }
 
 @article{trinkausMiddlePaleolithicHuman2007,
