--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "The spatial patterning of Middle Paleolithic human settlement in Western Iberia"
+title: "The spatial patterning of Middle Paleolithic human settlement in westernmost Iberia"
 author:
   - João Cascalheira
   - Célia Gonçalves
